--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-e/index.html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Xpperformance</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Bienvenue sur Xpperformance</h1>
+  <p>Le site fonctionne 🎉</p>
+
+  <nav>
+    <a href="contact.html">Contact</a> |
+    <a href="stage.html">Stage</a> |
+    <a href="e85.html">E85</a>
+  </nav>
+</body>
+</html>
