--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Xpperformance</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bienvenue sur Xpperformance</h1>
-  <p>Le site fonctionne 🎉</p>
+
+  <h1>Xpperformance</h1>
+  <p>Le site fonctionne correctement 🎉</p>
 
   <nav>
-    <a href="contact.html">Contact</a> |
-    <a href="stage.html">Stage</a> |
-    <a href="e85.html">E85</a>
+    <ul>
+      <li><a href="e85.html">E85</a></li>
+      <li><a href="stage.html">Stage</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
+
 </body>
 </html>
