--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,9 @@
-<a href="contact.html">Contact</a>
+<nav>
+  <a href="index.html">Accueil</a> |
+  <a href="stage.html">Stage</a> |
+  <a href="e85.html">E85</a> |
+  <a href="contact.html">Contact</a>
+</nav>
 
 <h1>Contact</h1>
 <p>Pour toute demande d’information ou devis :</p>
