--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<nav>
+  <a href="index.html">Accueil</a> |
+  <a href="stage.html">Stage</a> |
+  <a href="e85.html">E85</a> |
+  <a href="contact.html">Contact</a>
+</nav>
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
