Simplify message in merci.html

--- a/merci.html
+++ b/merci.html
@@ -91,7 +91,7 @@
     <p>
       Merci pour votre message.<br />
       L’équipe <strong>XP PERFORMANCE</strong> vous recontactera rapidement
-      pour votre projet de reprogrammation moteur.
+      pour votre projet.
     </p>
     <a href="index.html" class="button">Retour à l’accueil</a>
   </div>
