--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
   </iframe>
 
   <div class="map-marker">
-    <img src="assets/images/logo-xp.png" alt="XP Performance">
-  </div>
+  <img src="assets/images/logo-xp-marker.png" alt="XP Performance">
 </div>
 
   <footer>
