--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   </div>
 </section>
 
-<section class="location">
+<section class="location" id="contact">
   <h2>📍 NOUS TROUVER</h2>
 
   <p class="address">
@@ -189,26 +189,27 @@
     01330 Ambérieux-en-Dombes
   </p>
 
- <div class="map-container">
-  <iframe
-    src="https://www.google.com/maps?q=224%20rue%20Gombette%2001330%20Amb%C3%A9rieux-en-Dombes&z=16&output=embed"
-    loading="lazy">
-  </iframe>
+  <div class="map-container">
+    <iframe
+      src="https://www.google.com/maps?q=224%20rue%20Gombette%2001330%20Amb%C3%A9rieux-en-Dombes&z=16&output=embed"
+      loading="lazy">
+    </iframe>
 
- <div class="map-marker">
-  <a
-    href="https://www.google.com/maps/dir/?api=1&destination=224+rue+Gombette+01330+Amb%C3%A9rieux-en-Dombes"
-    target="_blank"
-    aria-label="Itinéraire vers XP Performance"
-  >
-    <img src="assets/images/logo-xp-marker.png" alt="XP Performance">
-  </a>
-</div>
-   
-<p style="color:#fff; font-size:0.9rem;">
-  Cliquez sur le logo pour lancer l’itinéraire Google Maps
-</p>
+    <div class="map-marker">
+      <a
+        href="https://www.google.com/maps/dir/?api=1&destination=224+rue+Gombette+01330+Amb%C3%A9rieux-en-Dombes"
+        target="_blank"
+        aria-label="Itinéraire vers XP Performance"
+      >
+        <img src="assets/images/logo-xp-marker.png" alt="XP Performance">
+      </a>
+    </div>
+  </div>
 
+  <p style="margin-top:15px; font-size:0.9rem;">
+    Cliquez sur le logo pour lancer l’itinéraire Google Maps
+  </p>
+</section>
 
   <footer>
     © 2026 XP PERFORMANCE – Reprogrammation moteur haute performance
