--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </div>
 </section>
 
-  <section class="contact">
+<section class="contact">
   <h2>Contact</h2>
 
   <form action="https://formsubmit.co/TON_EMAIL_ICI" method="POST">
@@ -193,6 +193,16 @@
 
       <div class="card">
         <input type="email" name="email" placeholder="Adresse email" required>
+      </div>
+
+      <!-- 🔥 NOUVEAU : Téléphone -->
+      <div class="card">
+        <input
+          type="tel"
+          name="phone"
+          placeholder="Numéro de téléphone"
+          inputmode="tel"
+        >
       </div>
 
       <div class="card">
