--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 
+  <!-- SEO -->
+<title>XP Performance – Reprogrammation moteur & conversion éthanol E85</title>
+
+<meta name="description" content="XP Performance, spécialiste de la reprogrammation moteur sur mesure. Gagnez en performance et en économie grâce à la conversion éthanol E85.">
+
+<!-- Logo pour Google -->
+<link rel="icon" href="assets/images/logo-xp.png" type="image/png">
+
+<!-- Open Graph (Google / réseaux) -->
+<meta property="og:title" content="XP Performance – Reprogrammation moteur sur mesure">
+<meta property="og:description" content="Spécialiste de la reprogrammation moteur sur mesure et conversion éthanol E85. Performance, fiabilité et économies.">
+<meta property="og:image" content="https://xpperformance.fr/assets/images/logo-xp.png">
+<meta property="og:url" content="https://xpperformance.fr">
+<meta property="og:type" content="website">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "AutomotiveBusiness",
+  "name": "XP Performance",
+  "url": "https://xpperformance.fr",
+  "logo": "https://xpperformance.fr/assets/images/logo-xp.png",
+  "description": "Spécialiste de la reprogrammation moteur sur mesure et conversion éthanol E85",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "224 rue Gombette",
+    "postalCode": "01330",
+    "addressLocality": "Ambérieux-en-Dombes",
+    "addressCountry": "FR"
+  }
+}
+</script>
+
 <body>
 
 <header class="header">
