--- a/index.html
+++ b/index.html
@@ -3,43 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XP Performance – Reprogrammation moteur</title>
 
+  <title>XP Performance – Reprogrammation moteur & conversion E85</title>
+  <meta name="description" content="XP Performance, spécialiste de la reprogrammation moteur sur mesure et conversion éthanol E85. Performance, fiabilité et économies.">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Favicon / Logo Google -->
+  <link rel="icon" href="assets/images/logo-xp.png" type="image/png">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="XP Performance – Reprogrammation moteur sur mesure">
+  <meta property="og:description" content="Spécialiste de la reprogrammation moteur et conversion éthanol E85">
+  <meta property="og:image" content="https://xpperformance.fr/assets/images/logo-xp.png">
+  <meta property="og:url" content="https://xpperformance.fr">
+  <meta property="og:type" content="website">
 </head>
-
-  <!-- SEO -->
-<title>XP Performance – Reprogrammation moteur & conversion éthanol E85</title>
-
-<meta name="description" content="XP Performance, spécialiste de la reprogrammation moteur sur mesure. Gagnez en performance et en économie grâce à la conversion éthanol E85.">
-
-<!-- Logo pour Google -->
-<link rel="icon" href="assets/images/logo-xp.png" type="image/png">
-
-<!-- Open Graph (Google / réseaux) -->
-<meta property="og:title" content="XP Performance – Reprogrammation moteur sur mesure">
-<meta property="og:description" content="Spécialiste de la reprogrammation moteur sur mesure et conversion éthanol E85. Performance, fiabilité et économies.">
-<meta property="og:image" content="https://xpperformance.fr/assets/images/logo-xp.png">
-<meta property="og:url" content="https://xpperformance.fr">
-<meta property="og:type" content="website">
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "AutomotiveBusiness",
-  "name": "XP Performance",
-  "url": "https://xpperformance.fr",
-  "logo": "https://xpperformance.fr/assets/images/logo-xp.png",
-  "description": "Spécialiste de la reprogrammation moteur sur mesure et conversion éthanol E85",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "224 rue Gombette",
-    "postalCode": "01330",
-    "addressLocality": "Ambérieux-en-Dombes",
-    "addressCountry": "FR"
-  }
-}
-</script>
 
 <body>
 
@@ -52,20 +35,17 @@
   <p>Reprogrammation moteur sur mesure. Performance, fiabilité et passion automobile.</p>
 </section>
 
-<section class="services">
+<section class="section">
   <h2>Stages moteur</h2>
-
   <div class="cards">
     <div class="card">
       <h3>Stage 1</h3>
       <p>Optimisation électronique sans modification mécanique.</p>
     </div>
-
     <div class="card">
       <h3>Stage 2</h3>
       <p>Reprogrammation avancée avec pièces performance.</p>
     </div>
-
     <div class="card">
       <h3>Stage 3</h3>
       <p>Préparation complète sur projet spécifique.</p>
@@ -73,20 +53,17 @@
   </div>
 </section>
 
-<section class="services">
+<section class="section">
   <h2>Conversion E85</h2>
-
   <div class="cards">
     <div class="card">
       <h3>Économie</h3>
-      <p>Réduction importante du coût au kilomètre.</p>
+      <p>Réduction significative du coût au kilomètre.</p>
     </div>
-
     <div class="card">
       <h3>Performance</h3>
       <p>Indice d’octane élevé = meilleur rendement.</p>
     </div>
-
     <div class="card">
       <h3>Fiabilité</h3>
       <p>Cartographie sécurisée et protections moteur.</p>
@@ -94,7 +71,7 @@
   </div>
 </section>
 
-<section class="contact">
+<section class="section contact">
   <h2>Contact</h2>
 
   <form
@@ -113,11 +90,11 @@
       <textarea name="message" rows="5" placeholder="Votre demande..." class="full" required></textarea>
     </div>
 
-    <button type="submit" class="btn">Envoyer</button>
+    <button type="submit" class="btn">ENVOYER</button>
   </form>
 </section>
 
-<section class="location">
+<section class="section location">
   <h2>📍 Nous trouver</h2>
 
   <p class="address">
@@ -143,10 +120,8 @@
 </section>
 
 <footer class="footer">
-  © 2026 XP PERFORMANCE – Reprogrammation moteur
+  © 2026 XP PERFORMANCE – Reprogrammation moteur sur mesure
 </footer>
 
 </body>
 </html>
-
-
