--- a/index.html
+++ b/index.html
@@ -55,21 +55,24 @@
 
 <section class="section">
   <h2>Conversion E85</h2>
+
   <div class="cards">
     <div class="card">
-      <h3>Économie</h3>
-      <p>Réduction significative du coût au kilomètre.</p>
+      <h3>Conversion Flex Simple</h3>
+      <p>
+        Conversion éthanol E85 optimisée pour un usage quotidien.<br><br>
+      </p>
     </div>
+
     <div class="card">
-      <h3>Performance</h3>
-      <p>Indice d’octane élevé = meilleur rendement.</p>
-    </div>
-    <div class="card">
-      <h3>Fiabilité</h3>
-      <p>Cartographie sécurisée et protections moteur.</p>
+      <h3>Conversion Flex+</h3>
+      <p>
+        Conversion éthanol + Stage 1, avec optimisation des performances.<br><br>
+      </p>
     </div>
   </div>
 </section>
+
 
 <section class="section contact">
   <h2>Contact</h2>
