--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </section>
 
 <section class="section">
-  <h2>Stages moteur</h2>
+  <h2>Reprogrammation moteur</h2>
   <div class="cards">
     <div class="card">
       <h3>Stage 1</h3>
