--- a/index.html
+++ b/index.html
@@ -35,44 +35,104 @@
   <p>Reprogrammation moteur sur mesure. Performance, fiabilité et passion automobile.</p>
 </section>
 
-<section class="section">
+<section class="section" id="reprogrammation">
   <h2>Reprogrammation moteur</h2>
+
   <div class="cards">
-    <div class="card">
+
+    <!-- STAGE 1 -->
+    <div class="card toggle-card">
       <h3>Stage 1</h3>
-      <p>Optimisation électronique sans modification mécanique.</p>
+      <p class="short">Optimisation électronique sans modification mécanique.</p>
+
+      <div class="details">
+        <p>
+          La reprogrammation Stage 1 consiste à optimiser la cartographie moteur d’origine,
+          sans modification de pièces mécaniques.
+          Elle améliore la puissance, le couple et la souplesse du moteur,
+          pour une conduite plus agréable et plus dynamique au quotidien.
+        </p>
+      </div>
     </div>
-    <div class="card">
+
+    <!-- STAGE 2 -->
+    <div class="card toggle-card">
       <h3>Stage 2</h3>
-      <p>Reprogrammation avancée avec pièces performance.</p>
+      <p class="short">Reprogrammation avancée avec pièces performance.</p>
+
+      <div class="details">
+        <p>
+          Le Stage 2 s’adresse aux conducteurs souhaitant aller plus loin.
+          Il inclut l’installation de composants performance
+          (échappement sport, admission, intercooler…)
+          afin de permettre une cartographie moteur plus poussée,
+          offrant des performances nettement supérieures tout en conservant la fiabilité.
+        </p>
+      </div>
     </div>
-    <div class="card">
+
+    <!-- STAGE 3 -->
+    <div class="card toggle-card">
       <h3>Stage 3</h3>
-      <p>Préparation complète sur projet spécifique.</p>
+      <p class="short">Préparation complète sur projet spécifique.</p>
+
+      <div class="details">
+        <p>
+          Le Stage 3 correspond à une préparation mécanique et électronique complète.
+          Turbo, injecteurs, refroidissement et gestion moteur sont adaptés
+          selon les objectifs du client : performance extrême, usage intensif ou compétition.
+          Chaque projet est entièrement personnalisé.
+        </p>
+      </div>
     </div>
+
   </div>
 </section>
 
-<section class="section">
-  <h2>Conversion E85</h2>
+<section class="section" id="E85">
+  <h2>Conversion éthanol E85</h2>
 
   <div class="cards">
-    <div class="card">
+
+    <!-- Flex Simple -->
+    <div class="card toggle-card">
       <h3>Conversion Flex Simple</h3>
-      <p>
-        Conversion éthanol E85 optimisée pour un usage quotidien.<br><br>
-      </p>
+      <p class="short">Compatibilité E85 fiable et économique pour un usage quotidien.</p>
+
+      <div class="details">
+        <p>
+          La conversion Flex Simple permet à votre véhicule essence de fonctionner indifféremment au Superéthanol E85, au SP95/SP98 ou avec un mélange des deux carburants, sans contrainte de proportion.
+          La cartographie moteur est adaptée avec précision afin que le système s’ajuste automatiquement au carburant utilisé, en s’appuyant sur les capteurs d’origine du véhicule.
+          Cette solution garantit une utilisation souple et transparente au quotidien, sans obligation de rouler exclusivement à l’E85.
+        </p>
+
+        <p>
+          En plus de son coût à la pompe nettement inférieur, le Superéthanol E85 offre un impact environnemental réduit grâce à son origine végétale.
+          La prestation comprend une calibration sur mesure ainsi qu’un passage au banc, assurant fiabilité, sécurité et longévité moteur.
+        </p>
+      </div>
     </div>
 
-    <div class="card">
+    <!-- Flex+ -->
+    <div class="card toggle-card">
       <h3>Conversion Flex+</h3>
-      <p>
-        Conversion éthanol + Stage 1, avec optimisation des performances.<br><br>
-      </p>
+      <p class="short">Conversion éthanol E85 avec optimisation des performances moteur.</p>
+
+      <div class="details">
+        <p>
+          La conversion Flex+ associe la compatibilité complète E85 à une optimisation avancée de la cartographie moteur.
+          Le véhicule conserve la possibilité de fonctionner à l’E85, au SP95/SP98 ou avec un mélange des deux carburants, tout en exploitant pleinement le potentiel de l’indice d’octane élevé du Superéthanol.
+        </p>
+
+        <p>
+          Cette configuration permet un gain sensible en puissance, en couple et en réactivité, offrant une conduite plus dynamique et plus agréable.
+          La Flex+ s’adresse aux conducteurs souhaitant allier économies à la pompe et amélioration des performances, sans compromis sur la fiabilité ni la sécurité moteur.
+        </p>
+      </div>
     </div>
+
   </div>
 </section>
-
 
 <section class="section contact">
   <h2>Contact</h2>
