--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Flex Simple -->
     <div class="card toggle-card">
       <h3>Conversion Flex Simple</h3>
-      <p class="short">Compatibilité E85 fiable et économique pour un usage quotidien.</p>
+      <p class="short">Conversion éthanol E85 fiable et économique pour un usage quotidien.</p>
 
       <div class="details">
         <p>
