--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
 <header class="header">
-  <img src="assets/images/logo-xp-transp.png" alt="XP Performance">
+  <img src="assets/images/logo-xp.png" alt="XP Performance" class="logo">
 </header>
 
 <section class="hero">
