--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
 
 <body>
 
-  <header class="header">
-    <img src="assets/images/logo-xp-transp.png" alt="XP Performance" class="logo">
-  </header>
+<header class="top-banner">
+  <img src="assets/images/logo-xp-transp.png" alt="XP Performance" class="top-logo">
+</header>
 
-  <section class="hero">
-    <h1 class="hero-title">
-      <span class="xp">XP</span>
-      <span class="perf">PERFORMANCE</span>
+<section class="hero-image">
+  <div class="hero-overlay">
+    <h1>
+      REPROGRAMMATION DE MOTEUR SUR MESURE
     </h1>
-
     <p>
-      Reprogrammation moteur sur mesure. Performance, fiabilité et passion automobile.
+      Performance, fiabilité et passion automobile
     </p>
-  </section>
+  </div>
+</section>
+
 
 <section class="section" id="reprogrammation">
   <h2>Reprogrammation moteur</h2>
