--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </section>
     
   <!-- Les options de suppression -->
-<section class="section" id="E85">
+<section class="section" id="Options">
   <h2>Les options de suppression</h2>
 
   <div class="cards">
@@ -234,7 +234,7 @@
   </div>
 </section>
 
-<section class="section contact">
+<section class="section" id="Contact">
   <h2>Contact</h2>
 
   <form
