--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 </head>
 
 <body>
+  
+<nav class="main-nav">
+  <ul>
+    <li><a href="#reprogrammation">Reprogrammation</a></li>
+    <li><a href="#conversion">Conversion</a></li>
+    <li><a href="#options">Options</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
 <header class="top-banner">
   <img src="assets/images/logo-xp-transp.png" alt="XP Performance" class="top-logo">
