--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   </form>
 </section>
 
-<section class="section localisation" id="Nous trouver">
+<section class="section localisation" id="nous-trouver">
   <h2>📍 Nous trouver</h2>
 
   <p class="address">
@@ -291,6 +291,7 @@
     </a>
   </div>
 </section>
+
 
 ...
 <footer class="footer">
