--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   
 <nav class="main-nav">
   <ul>
-    <li><a href="#Reprogrammation">Reprogrammation</a></li>
-    <li><a href="#Conversion éthanol E85">Conversion</a></li>
-    <li><a href="#Les options de suppression">Options</a></li>
-    <li><a href="#Contact">Contact</a></li>
-    <li><a href="#Nous trouver">Nous trouver</a></li>
+    <li><a href="#reprogrammation">Reprogrammation</a></li>
+    <li><a href="#conversion">Conversion</a></li>
+    <li><a href="#options">Options</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#nous-trouver">Nous trouver</a></li>
   </ul>
 </nav>
 
@@ -52,7 +52,7 @@
 </section>
 
 
-<section class="section" id="Reprogrammation">
+<section class="section" id="reprogrammation">
   <h2>Reprogrammation </h2>
 
   <div class="cards">
@@ -105,7 +105,7 @@
   </div>
 </section>
 
-<section class="section" id="Conversion">
+<section class="section" id="conversion">
   <h2>Conversion éthanol E85</h2>
 
   <div class="cards">
@@ -151,7 +151,7 @@
 </section>
     
   <!-- Les options de suppression -->
-  <section class="section" id="Options">
+<section class="section" id="options">
   <h2>Les options de suppression</h2>
 
   <div class="cards">
@@ -244,7 +244,7 @@
   </div>
 </section>
 
-<section class="section" id="Contact">
+<section class="section contact" id="contact">
   <h2>Contact</h2>
 
   <form
